sqlplot-rs-derive/tests/test_code/invalid_skip_argument_test.stderr
error: unexpected token in attribute
 --> tests/test_code/invalid_skip_argument_test.rs:7:11
  |
7 |     #[skip(random_arg)]
  |           ^
